--- a/style.css
+++ b/style.css
@@ -1,26 +1,105 @@
 @font-face {
     font-family: JosefinSans;
      src: url("assets/fonts/JosefinSans-Italic-VariableFont_wght.ttf");
-   }
-   .bgp {
-    width: 121px;
-    height: 45px;
-    background-image: url("./assets/svg/bgp.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-body {
-    
-
-      
+    }
+  
+    .body {
+      max-width: 1024px;
+      min-width: 600px;
+      margin: 0 auto;
     font-family: 'JosefinSans', sans-serif;
     font-weight: 400;
-    line-height: 1.5;
-    color: #1121ad;
-    background-color: rgba(255, 255, 255, 0.5)
+    line-height: 1.8;
+    padding: 2rem;
+    background-image: url("./assets/svg/MMblue.jpg");
+    background-repeat: repeat; 
+    background-size: 30px;  
+    box-shadow: 10px 10px 50px 5px rgb(0 0 0 / 60%); 
+   }
+
+    .main { 
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      flex-wrap: wrap;
+      align-content: stretch;
+      align-items: center;
 
   }
-  m10 + Tab = margin: 100px;
-p10 + Tab = padding: 100px;
 
-bgi + Tab = background-image: url();
+  .header {
+    width: 93.5%;
+    height: 30%;
+    background: rgba(252, 253, 239, 0.85);
+    box-shadow: 10px 10px 50px 5px rgb(0 0 0 / 60%);
+    font-size: large;
+    margin: 0 auto;
+      }
+
+  .article {
+    width: 42%;
+    height: 10%;
+    margin: 25px 0px 0px 0px;
+    background: rgba(252, 253, 239, 0.85);
+    box-shadow: 10px 10px 50px 5px rgb(0 0 0 / 60%);
+    padding-left: 20px;
+    padding-right: 10px;
+  }
+
+  .article2 {
+    width: 93.5%;
+    background: rgba(252, 253, 239, 0.85);
+    box-shadow: 10px 10px 50px 5px rgb(0 0 0 / 60%);
+    font-size: large;
+    margin: 25px 0px 0px 0px;
+   
+  }
+    .footer {
+    width: 93.5%;
+    background: rgba(252, 253, 239, 0.85);
+    box-shadow: 10px 10px 50px 5px rgb(0 0 0 / 60%);
+    margin: 25px 0px 0px 0px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .footer2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+}
+
+  .background {
+    background-color: #6abafc;
+    padding-left: 30px;
+    width: 75%;
+    font-size: larger;
+  }
+
+    .contacts {
+      padding: 0;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: stretch;
+      align-content: stretch;
+}
+.portfolio {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  align-content: center;
+}
+
+.centerline {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  align-content: center;
+}
