--- a/style.css
+++ b/style.css
@@ -28,11 +28,12 @@
 
   .header {
     width: 93.5%;
-    height: 30%;
     background: rgba(252, 253, 239, 0.85);
     box-shadow: 10px 10px 50px 5px rgb(0 0 0 / 60%);
-    font-size: large;
-    margin: 0 auto;
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
   }
 
   .article {
@@ -41,8 +42,8 @@
     margin: 25px 0px 0px 0px;
     background: rgba(252, 253, 239, 0.85);
     box-shadow: 10px 10px 50px 5px rgb(0 0 0 / 60%);
-    padding-left: 20px;
-    padding-right: 10px;
+    padding-left: 10px;
+    padding-right: 20px;
   }
 
   .article2 {
@@ -103,3 +104,9 @@
   flex-wrap: wrap;
   align-content: center;
 }
+
+  .nobull {
+    list-style-type: none;
+    margin-left: 0; 
+    padding-left: 0;
+  }
